<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/contact"
        android:title="@string/contact"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/filter"
        android:title="@string/filter"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/create"
        android:title="@string/create"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>