<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".A3Contact">

    <TextView
        android:id="@+id/tvContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONTACTO"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teléfono:" />

    <TextView
        android:id="@+id/tvValueTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo:" />

    <TextView
        android:id="@+id/tvValueCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo" />

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WEB" />

    <TextView
        android:id="@+id/tvValueWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="50dp">

        <Button
            android:id="@+id/btTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Teléfono"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Correo"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WEB"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>