<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A6AddMovie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.activities.MovieDetailsActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTitleRatingRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="316dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/genretitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textViewRating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewGenre"
                    app:layout_constraintEnd_toStartOf="@+id/textViewReleaseDate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewGenre"
                    app:layout_constraintTop_toTopOf="@+id/textViewGenre" />

                <TextView
                    android:id="@+id/textViewReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/release_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewRating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewRating"
                    app:layout_constraintTop_toTopOf="@+id/textViewRating" />

                <EditText
                    android:id="@+id/textEditTitle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text=""
                    android:hint="Title"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/textViewGenre"
                    app:layout_constraintStart_toStartOf="@+id/textViewGenre"
                    app:layout_constraintTop_toBottomOf="@+id/textViewGenre"
                    tools:text="" />

                <EditText
                    android:id="@+id/textViewRatingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Rating"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textEditTitle"
                    app:layout_constraintEnd_toEndOf="@+id/textViewRating"
                    app:layout_constraintStart_toEndOf="@+id/textViewGenre"
                    app:layout_constraintTop_toTopOf="@+id/textEditTitle"
                    tools:text="9.2" />

                <EditText
                    android:id="@+id/textViewReleaseDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Fecha"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewRatingValue"
                    app:layout_constraintEnd_toEndOf="@+id/textViewReleaseDate"
                    app:layout_constraintStart_toEndOf="@+id/textViewRating"
                    app:layout_constraintTop_toTopOf="@+id/textViewRatingValue"
                    tools:text="21st march 1990" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/textViewSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal|start"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:text="@string/synopsis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTitleRatingRelease" />

            <EditText
                android:id="@+id/textViewSynopsisValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="8dp"
                android:hint="Descripcion"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSynopsis" />

            <TextView
                android:id="@+id/textViewDirectorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:text="@string/director"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSynopsisValue" />

            <EditText
                android:id="@+id/textViewDirectorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Director"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDirectorTitle"
                app:layout_constraintStart_toEndOf="@+id/textViewDirectorTitle"
                app:layout_constraintTop_toTopOf="@+id/textViewDirectorTitle" />

            <TextView
                android:id="@+id/textViewRuntimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:text="Runtime:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDirectorTitle" />

            <EditText
                android:id="@+id/textViewRuntimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Runtime"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRuntimeTitle"
                app:layout_constraintStart_toEndOf="@+id/textViewRuntimeTitle"
                app:layout_constraintTop_toTopOf="@+id/textViewRuntimeTitle" />

            <TextView
                android:id="@+id/textViewActorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:text="@string/actors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeTitle" />


            <EditText
                android:id="@+id/etActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Actor id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewActorsTitle" />

            <TextView
                android:id="@+id/textViewGenresTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:text="@string/genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etActor" />


            <EditText
                android:id="@+id/etGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Genre id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewGenresTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>